Updated statistics overlap to fix overlapping issue with text

--- a/blocks/statistics/statistics.css
+++ b/blocks/statistics/statistics.css
@@ -118,7 +118,7 @@
     content: '';
     background: var(--background-color);
     position: absolute;
-    inset: -70px 0 0;
+    inset: -40px 0 0;
     width: 100%;
     max-width: 1280px;
     margin: 0 auto;
